Add displayController render function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,13 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-    "no-unused-vars": 1
+    "no-unused-vars": 1,
+    "no-sparse-arrays": 1,
+    "no-restricted-syntax": [
+      "error",
+      "ForInStatement",
+      "LabeledStatement",
+      "WithStatement"
+    ]
   }
 }
