--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,12 +10,6 @@
   },
   "rules": {
     "no-unused-vars": 1,
-    "no-sparse-arrays": 1,
-    "no-restricted-syntax": [
-      "error",
-      "ForInStatement",
-      "LabeledStatement",
-      "WithStatement"
-    ]
+    "no-sparse-arrays": 1
   }
 }
